<resources>
    <string name="app_name">ShoeStore</string>
    <string name="loginUserNameLabel">User Name</string>
    <string name="userNameHint">Enter User Name (Email)</string>
    <string name="password_label">Password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="signInButtonLabel">Sign In</string>
    <string name="signUpButtonLabel">Sign Up</string>
    <string name="welcomeScreenTitle">Welcome To The Shoe Store</string>
    <string name="welcomeScreenDetailText">A shoe is an item of footwear intended to protect and comfort the human foot.
        \n\nShoes are also used as an item of decoration and fashion. The design of shoes has varied enormously through time and from culture to culture,
        \n\nwith form originally being tied to function. Though the human foot can adapt to varied terrains and climate conditions,
        \n\nit is still vulnerable to environmental hazards such as sharp rocks and temperature extremes, which shoes protect against.
        \n\nSome shoes are worn as safety equipment, such as steel-toe boots which are required footwear at industrial worksites.
        \n\nSource: https://en.wikipedia.org/wiki/Shoe
    </string>
    <string name="InstructionScreenText">This app lets us enter your shoe details to keep track of them.
        \n\nYou can navigate to shoe list screen from here, where you can see a list of your shoes.
        \n\nIf you want to add a new shoe, please click the add button.
        \n\nThis will take you to the shoe details screen where you can add details of your shoe.
    </string>
    <string name="goToInstructionButton">Instructions</string>
    <string name="instruction_title">Instructions</string>
    <string name="shoeListButton">Shoe List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoeListEmpty">List is empty</string>
    <string name="shoeName">Name</string>
    <string name="ShoeEdit">Edit</string>
    <string name="shoeCompanyLabel">Company</string>
    <string name="shoeSizeLabel">Shoe Size</string>
    <string name="shoeDescriptionLabel">Description</string>
    <string name="shoeDetailCancelButton">Cancel</string>
    <string name="shoeDetailSaveButton">Save</string>
    <string name="menuLogout">logout</string>
    <string name="shoe_name_hint">Shoe Name</string>
    <string name="company_name_hint">Company Name</string>
    <string name="shoe_size_hint">Shoe Size</string>
    <string name="description_hint">Description</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="description">Description:</string>
    <string name="company_name">Company Name:</string>
    <string name="shoe_size">Shoe Size:</string>
</resources>
