<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
<!--    Using MaterialCard View for each of the shoe-item
        Material card view provides the customization required for this.-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shoeItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/panelColorBackground"
        app:cardBackgroundColor="#EEE3EE"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp">

<!-- Linear Layout being a ViewGroup, will help all child elements to align better
        This is a parent LinearLayout that will hold all other LinearLayout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <!-- This is the LinearLayout grouping the first pair of text label and content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />

                <TextView
                    android:id="@+id/shoe_name"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/shoe_name_hint" />
            </LinearLayout>
            <!-- This is the LinearLayout grouping the second pair of text label and content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_name_hint" />
            </LinearLayout>
            <!-- This is the LinearLayout grouping the third pair of text label and content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size" />

                <TextView
                    android:id="@+id/shoe_size"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/shoe_size_hint" />
            </LinearLayout>
            <!-- This is the LinearLayout grouping the fourth pair of text label and content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>