<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.login.LoginViewModel" />
        <variable
            name="user"
            type="com.udacity.shoestore.models.User" />
        <variable
            name="userProfile"
            type="com.udacity.shoestore.models.UserProfile" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/message"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:text=""
        android:textColor="@color/selected_red_color"
        app:layout_constraintBottom_toTopOf="@+id/user_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name_label"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/loginUserNameLabel"
        app:layout_constraintEnd_toStartOf="@+id/user_name_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name_text"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/userNameHint"
        android:inputType="textPersonName"
        android:text="@={user.userName}"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_name_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/password_label_text"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/password_label"
        app:layout_constraintEnd_toStartOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_label" />

    <EditText
        android:id="@+id/password_text"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:text="@={user.password}"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_label_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signin_button"
        style="@style/SignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#3A7A74"
        android:text="@string/signInButtonLabel"
        android:onClick="@{()->loginViewModel.check(user.userName,user.password)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label_text" />

    <Button
        android:id="@+id/button2"
        style="@style/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/signUpButtonLabel"
        android:onClick="@{()->loginViewModel.signUp(user.userName,user.password)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>