<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeItem"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="shoelistViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
        <import type="com.udacity.shoestore.util.DataBindingConverter"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/shoename_text_view"
            style="@style/TextStyle"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="96dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/shoeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoename_text_edit"
            android:layout_width="0dp"
            android:layout_height="44dp"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:hint="@string/ShoeEdit"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={shoeItem.name}"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoename_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoename_text_view" />

        <TextView
            android:id="@+id/shoecomapny_text_view"
            style="@style/TextStyle"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/shoeCompanyLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoename_text_view" />

        <EditText
            android:id="@+id/shoecompany_text_edit"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/ShoeEdit"
            android:inputType="textPersonName"
            android:text="@={shoeItem.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoecomapny_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoecomapny_text_view" />

        <TextView
            android:id="@+id/shoesize_text_view"
            style="@style/TextStyle"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/shoeSizeLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoecomapny_text_view" />

        <EditText
            android:id="@+id/shoesize_text_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/ShoeEdit"
            android:inputType="numberDecimal"
            android:text="@={DataBindingConverter.convertDoubleToString(shoeItem.size)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoesize_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoesize_text_view" />

        <TextView
            android:id="@+id/shoedescription_text_view"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/shoeDescriptionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoesize_text_view" />

        <EditText
            android:id="@+id/shoedescription_text_edit"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/ShoeEdit"
            android:inputType="textPersonName"
            android:text="@={shoeItem.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoedescription_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoedescription_text_view" />

        <Button
            android:id="@+id/shoe_detail_cancel_button"
            style="@style/SignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="116dp"
            android:text="@string/shoeDetailCancelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoedescription_text_view" />

        <Button
            android:id="@+id/shoe_detail_save_button"
            style="@style/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#105C1D"
            android:text="@string/shoeDetailSaveButton"
            android:onClick="@{()->shoelistViewModel.save(shoeItem.name, shoeItem.size, shoeItem.company, shoeItem.description)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_detail_cancel_button"
            app:layout_constraintTop_toTopOf="@+id/shoe_detail_cancel_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>