<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--Constraint layout creates a flat hierarchy of elements it contains. It will help to avoid
     nesting, yet will help to constraint the relationships with the various elements-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/instruction_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:text="@string/instruction_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_screen_details"
            style="@style/TextStyle"
            android:layout_width="359dp"
            android:layout_height="355dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/paragraph_font"
            android:text="@string/InstructionScreenText"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_screen" />

        <Button
            android:id="@+id/go_to_shoe_list"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoeListButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_screen_details"
            app:layout_constraintVertical_bias="0.425" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>